# Tesla-Financial-Report-Intelligent-Q-A

./: .env.example  .gitignore  FAILURE_ANALYSIS.md  README.md  app.py  pyproject.toml  运行操作.txt  项目报告.md
eval/: test_questions.json
reports/: FAILURE_ANALYSIS.md  eval_comparison.md  test_answer_details_v2.md
src/core/: calculator.py  config.py  embeddings.py  generator.py  indexer.py  parser.py  qa_engine.py  retriever.py  schema.py  utils.py
src/pipeline/: build_index.py  run_eval.py
